# esp32-s3-nut-node-flex

./: .gitignore  CLAUDE.md  README.md  build.sh  git-push.ps1  idf-build.ps1  post_config.ps1
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: label-new-issue.yml  update-compat-list.yml
docs/: DECISIONS.md  DOC-REGISTRY.md  confirmed-ups.md  github_push.md  next_steps.md  project_state.md  session_log.md  v0.44-ARCHITECTURE.md
docs/nut-captures/: apc-backups-xs1300g-864l8.txt  apc-xs1500m-20260529-230830.txt  apc-xs1500m-nut-debug.txt  cyberpower-0764-0601-cst150uc-v046.txt  cyberpower-0764-0601-cst150uc.txt  esp32-monitor-xs1500m.txt  nut-direct-br1000g-debug.txt  nut-direct-model2-debug.txt  nut-direct-pro1000-debug.txt  nut-direct-xs1500m-debug.txt
downloads/: nut_server.c
downloads/ups_get_report_submission/: ups_get_report.c  (+2 more)
main/: ups_get_report.c  ups_hid_parser.c
src/current/main/: .cproject  CMakeLists.txt  cfg_store.c  cfg_store.h  diag_capture.c  diag_capture.h  http_compat.c  http_compat.h  http_config_page.c  http_config_page.h  http_dashboard.c  http_dashboard.h  http_portal.c  main.c  nut_bridge.c  nut_client.c  nut_client.h  nut_server.c  nut_server.h  ups_db_apc.c  ups_db_cyberpower.c  ups_db_eaton.c  ups_db_eaton.h  ups_db_standard.c  ups_device_db.c  ups_device_db.h  ups_get_report.c  ups_get_report.h  ups_hid_desc.c  ups_hid_desc.h  ups_hid_map.c  ups_hid_map.h  ups_hid_parser.c  ups_hid_parser.h  ups_state.c  ups_state.h  ups_usb_hid.c  ups_usb_hid.h  ups_var_store.c  ups_var_store.h  (+3 more)
(+42 files in other folders)
