idf_component_register(SRCS
    "main.c"
    "cfg_store.c"
    "wifi_mgr.c"
    "http_portal.c"
    "http_dashboard.c"
    "http_config_page.c"
    "http_compat.c"
    "nut_server.c"
    "nut_client.c"
    "nut_bridge.c"
    "ups_state.c"
    "ups_usb_hid.c"
    "ups_hid_desc.c"
    "ups_hid_parser.c"
    "ups_device_db.c"
    "ups_db_apc.c"
    "ups_db_cyberpower.c"
    "ups_db_eaton.c"
    "ups_db_standard.c"
    "ups_get_report.c"
    INCLUDE_DIRS ".")
